# j4fgrad

./: CMakeLists.txt  Makefile  README.md
include/libgrad/: app.h  task.h  tensor.h
src/: matrix.c
src/bare/: app.c
src/mpi/: dot_task.c  inv_task.c  inv_task.h
src/omp/: app.c  inv_task.c
